--- a/install-ojdbc6/pom.xml
+++ b/install-ojdbc6/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.simplity</groupId>
 		<artifactId>all</artifactId>
-		<version>1.2.1</version>
+		<version>1.2.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>install-ojdbc6</artifactId>
 	<packaging>pom</packaging>
