--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.simplity</groupId>
 	<artifactId>all</artifactId>
-	<version>1.2.1</version>
+	<version>1.2.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>simplity-all</name>
 	<url>https://github.com/simplity/simplity</url>
@@ -26,7 +26,7 @@
 		<connection>scm:git:git://github.com/simplity/simplity.git</connection>
 		<developerConnection>scm:git:git@github.com:simplity/simplity.git</developerConnection>
 		<url>https://github.com/simplity/simplity.git</url>
-		<tag>all-1.2.1</tag>
+		<tag>all-1.2</tag>
 	</scm>	
 	<modules>
 		<module>install-ojdbc6</module>
